sumo/tests/traci/Scenario/DomRoadMap/InvalidVariableId/testclient_out.traci
TraCITestClient output file. Date: Tue Feb 03 22:53:00 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Scenario>:
  flag=0 domain=0 domainId=0 variable=254 valueDataType=0 [no value sent]
.. Answered with error to command (115), [description: Unknown domain variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=2 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
